--- a/src/main/resources/templates/allprods.html
+++ b/src/main/resources/templates/allprods.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProductView</title>
+    <title>AllProducts</title>
 </head>
 <body>
-    <h1>Product View</h1>
-    <p th:text="${product?.name}"></p>
+    <tr th:each="Product: ${prods}">
+    <td th:text="${Product.code}" />
+    <td th:text="${Product.name}" />
+    <p></p>
+    
 </body>
 </html>
