--- a/src/main/resources/templates/above.html
+++ b/src/main/resources/templates/above.html
@@ -6,6 +6,7 @@
     <title>ProductsAbove20</title>
 </head>
 <body>
+    <h1>Acima do valor:</h1>
     <tr th:each="Product: ${prods}">
     <td th:text="${Product.code}" />
     <td th:text="${Product.name}" />
